# s3Reader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
overlay/: cast.html  overlay.html  style.css
overlay/server/: index.js
plots/: custom-dark.mplstyle  environment.yml  plots.py
plots/example/: overlay-test-data.json
s3Reader/: CMakeLists.txt
s3Reader/include/: GameHandler.h  GameHandler.hpp  Listener.hpp  S3Stats.hpp  SharedState.hpp  WebSocketServer.hpp  WebSocketSession.hpp  boost.hpp
s3Reader/src/: GameHandler.cpp  Listener.cpp  S3Stats.cpp  SharedState.cpp  WebSocketServer.cpp  WebSocketSession.cpp  main.cpp
